product detail full ready

--- a/ShopingApp/ShopingApp/Views/ProductDetailVC.xib
+++ b/ShopingApp/ShopingApp/Views/ProductDetailVC.xib
@@ -35,7 +35,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5W7-i1-EHa">
                     <rect key="frame" x="0.0" y="79" width="328" height="297"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3zt-yZ-bkS">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3zt-yZ-bkS">
                             <rect key="frame" x="0.0" y="0.0" width="328" height="297"/>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibm-Mx-2Mi">
