--- a/ShopingApp/ShopingApp/Views/ProductDetailVC.xib
+++ b/ShopingApp/ShopingApp/Views/ProductDetailVC.xib
@@ -19,6 +19,7 @@
                 <outlet property="firstImage" destination="Xbr-Sa-xMB" id="Rv6-Lp-RK1"/>
                 <outlet property="mainPhoto" destination="3zt-yZ-bkS" id="aAk-vy-gce"/>
                 <outlet property="productName" destination="e33-Vc-abs" id="dGA-0Y-bLH"/>
+                <outlet property="savedView" destination="Bo8-Vb-Hyt" id="RV4-3b-aKO"/>
                 <outlet property="secondImage" destination="yQR-tx-R2A" id="7VV-pu-f2r"/>
                 <outlet property="thirdImage" destination="JT6-Zx-41l" id="USK-Iq-Nu9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -206,6 +207,9 @@
                                     <integer key="value" value="20"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="addToCartPressed:" destination="-1" eventType="touchUpInside" id="uyK-2b-kSk"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.094117647058823528" green="0.090196078431372548" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
@@ -321,6 +325,49 @@
                         </button>
                     </subviews>
                 </stackView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bo8-Vb-Hyt">
+                    <rect key="frame" x="40" y="70" width="313" height="70"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PdF-T4-Q4x">
+                            <rect key="frame" x="20" y="0.0" width="293" height="70"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="m7K-fU-BGc">
+                                    <rect key="frame" x="0.0" y="16" width="40" height="38.666666666666671"/>
+                                    <color key="tintColor" systemColor="systemGreenColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="40" id="eif-Ka-N6f"/>
+                                        <constraint firstAttribute="height" constant="40" id="xhC-xX-j5M"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Succesfully saved" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfS-Uh-8FX">
+                                    <rect key="frame" x="60" y="22" width="233" height="26.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="20"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemGray6Color"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="PdF-T4-Q4x" secondAttribute="trailing" id="1nn-Z0-gRB"/>
+                        <constraint firstAttribute="height" constant="70" id="2Se-pS-KRw"/>
+                        <constraint firstItem="PdF-T4-Q4x" firstAttribute="top" secondItem="Bo8-Vb-Hyt" secondAttribute="top" id="Bpm-VS-6ZC"/>
+                        <constraint firstItem="PdF-T4-Q4x" firstAttribute="leading" secondItem="Bo8-Vb-Hyt" secondAttribute="leading" constant="20" id="Kv9-cf-yQT"/>
+                        <constraint firstAttribute="bottom" secondItem="PdF-T4-Q4x" secondAttribute="bottom" id="Zq1-7M-vRm"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -328,7 +375,9 @@
                 <constraint firstItem="Xbr-Sa-xMB" firstAttribute="centerY" secondItem="yQR-tx-R2A" secondAttribute="centerY" id="0bJ-6i-a8Y"/>
                 <constraint firstItem="9oV-uT-1AE" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-10" id="15S-48-Nv1"/>
                 <constraint firstItem="yQR-tx-R2A" firstAttribute="leading" secondItem="Xbr-Sa-xMB" secondAttribute="trailing" constant="5" id="6CV-ux-0Ce"/>
+                <constraint firstItem="Bo8-Vb-Hyt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="9V4-F0-bkT"/>
                 <constraint firstItem="e33-Vc-abs" firstAttribute="top" secondItem="Xbr-Sa-xMB" secondAttribute="bottom" constant="40" id="A7h-pK-tF3"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Bo8-Vb-Hyt" secondAttribute="trailing" constant="40" id="C84-dn-VLW"/>
                 <constraint firstAttribute="bottom" secondItem="bFf-IO-nVe" secondAttribute="bottom" constant="-5" id="D5W-pt-20t"/>
                 <constraint firstItem="WQv-w3-q2G" firstAttribute="top" secondItem="e33-Vc-abs" secondAttribute="bottom" constant="20" id="DnP-O8-R6P"/>
                 <constraint firstItem="WQv-w3-q2G" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Ep4-ne-850"/>
@@ -348,6 +397,7 @@
                 <constraint firstItem="5W7-i1-EHa" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="l0b-yB-pNR"/>
                 <constraint firstItem="5W7-i1-EHa" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.834606" id="mFg-4R-b2k"/>
                 <constraint firstItem="VOR-Zu-x8a" firstAttribute="top" secondItem="GWD-kv-lss" secondAttribute="bottom" constant="20" id="mhF-IR-Fal"/>
+                <constraint firstItem="Bo8-Vb-Hyt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="70" id="q2W-O6-TKh"/>
                 <constraint firstItem="JT6-Zx-41l" firstAttribute="leading" secondItem="yQR-tx-R2A" secondAttribute="trailing" constant="5" id="q6x-Mb-59R"/>
                 <constraint firstItem="yQR-tx-R2A" firstAttribute="top" secondItem="5W7-i1-EHa" secondAttribute="bottom" constant="30" id="wQh-ek-n5R"/>
             </constraints>
@@ -355,6 +405,7 @@
         </view>
     </objects>
     <resources>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="123"/>
         <image name="chevron.left" catalog="system" width="97" height="128"/>
         <image name="heart" catalog="system" width="128" height="107"/>
         <image name="minus" catalog="system" width="128" height="26"/>
@@ -366,6 +417,12 @@
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
