--- a/ShopingApp/ShopingApp/Views/SavedProductsVC.xib
+++ b/ShopingApp/ShopingApp/Views/SavedProductsVC.xib
@@ -1,22 +1,106 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SavedProductsVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SavedProductsVC" customModule="ShopingApp" customModuleProvider="target">
             <connections>
+                <outlet property="blurView" destination="xfy-Vr-Wos" id="wFL-He-DfA"/>
+                <outlet property="collectionView" destination="63F-cA-Hd9" id="HUk-hC-Fpu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="63F-cA-Hd9">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Z2R-4a-siI">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xfy-Vr-Wos">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZKS-SL-GTX">
+                            <rect key="frame" x="71.666666666666686" y="376" width="250" height="100"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="M7o-hh-Luh">
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="100"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YZR-FU-QBe">
+                                            <rect key="frame" x="94.999999999999986" y="1" width="60.000000000000014" height="58.666666666666671"/>
+                                            <color key="tintColor" systemColor="systemPinkColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="AV4-eo-REW"/>
+                                                <constraint firstAttribute="width" constant="60" id="gGY-jR-ZF4"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="252" horizontalCompressionResistancePriority="754" verticalCompressionResistancePriority="752" text="Nothing Founded" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOy-mZ-r0y">
+                                            <rect key="frame" x="42.666666666666657" y="60" width="164.66666666666666" height="40"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="ABa-BA-aL0"/>
+                                <constraint firstItem="M7o-hh-Luh" firstAttribute="leading" secondItem="ZKS-SL-GTX" secondAttribute="leading" id="JtR-sZ-rxB"/>
+                                <constraint firstAttribute="trailing" secondItem="M7o-hh-Luh" secondAttribute="trailing" id="ifi-87-fWV"/>
+                                <constraint firstAttribute="bottom" secondItem="M7o-hh-Luh" secondAttribute="bottom" id="l5l-fZ-MKQ"/>
+                                <constraint firstItem="M7o-hh-Luh" firstAttribute="top" secondItem="ZKS-SL-GTX" secondAttribute="top" id="wHO-iA-c39"/>
+                                <constraint firstAttribute="width" constant="250" id="xN5-sY-ucW"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="Laywr.cornerRadius">
+                                    <integer key="value" value="20"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="ZKS-SL-GTX" firstAttribute="centerX" secondItem="xfy-Vr-Wos" secondAttribute="centerX" id="b8k-BS-hNv"/>
+                        <constraint firstItem="ZKS-SL-GTX" firstAttribute="centerY" secondItem="xfy-Vr-Wos" secondAttribute="centerY" id="t7D-cs-O4p"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="xfy-Vr-Wos" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LY4-PO-ZR2"/>
+                <constraint firstItem="63F-cA-Hd9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PrB-A5-JJh"/>
+                <constraint firstAttribute="bottom" secondItem="63F-cA-Hd9" secondAttribute="bottom" id="U3o-lJ-OZ3"/>
+                <constraint firstItem="xfy-Vr-Wos" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="XG2-TW-873"/>
+                <constraint firstItem="63F-cA-Hd9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="d0a-GV-f5S"/>
+                <constraint firstAttribute="bottom" secondItem="xfy-Vr-Wos" secondAttribute="bottom" id="hq2-sQ-Glx"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="63F-cA-Hd9" secondAttribute="trailing" id="jgZ-Zx-KW9"/>
+                <constraint firstItem="xfy-Vr-Wos" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="sCF-c0-qAs"/>
+            </constraints>
+            <point key="canvasLocation" x="118.32061068702289" y="20.422535211267608"/>
         </view>
     </objects>
+    <resources>
+        <image name="exclamationmark.circle.fill" catalog="system" width="128" height="123"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
