--- a/ShopingApp/ShopingApp/Views/LatestCell.xib
+++ b/ShopingApp/ShopingApp/Views/LatestCell.xib
@@ -61,6 +61,9 @@
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="addBtnPressed:" destination="gTV-IL-0wX" eventType="touchUpInside" id="iND-Ax-sQp"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOH-T6-4Gu">
                                 <rect key="frame" x="10" y="131.66666666666666" width="35" height="12"/>
