--- a/ShopingApp/ShopingApp/Views/FlashSaleCell.xib
+++ b/ShopingApp/ShopingApp/Views/FlashSaleCell.xib
@@ -32,10 +32,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="236" height="327"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ct9-jk-y2I">
-                                <rect key="frame" x="10" y="242" width="82.333333333333329" height="17.666666666666686"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="82.200000000000003" id="Rtb-oS-fAG"/>
-                                </constraints>
+                                <rect key="frame" x="10" y="242" width="196" height="17.666666666666686"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -152,6 +149,7 @@
                             <constraint firstItem="uaG-NC-KDJ" firstAttribute="leading" secondItem="UfT-U0-vFc" secondAttribute="leading" constant="10" id="hp1-fX-tR9"/>
                             <constraint firstItem="sZv-J2-fX4" firstAttribute="top" secondItem="UfT-U0-vFc" secondAttribute="top" constant="10" id="oIi-Jo-yeV"/>
                             <constraint firstAttribute="trailing" secondItem="Fji-00-Txt" secondAttribute="trailing" id="px5-He-iVm"/>
+                            <constraint firstAttribute="trailing" secondItem="Ct9-jk-y2I" secondAttribute="trailing" constant="30" id="uOu-AK-YlT"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -177,6 +175,7 @@
                 <outlet property="nameLbl" destination="Ct9-jk-y2I" id="bVy-G7-cwr"/>
                 <outlet property="priceLbl" destination="wmf-Vt-am3" id="ZX8-3u-8Fa"/>
                 <outlet property="productImage" destination="Fji-00-Txt" id="dEq-5R-QSh"/>
+                <outlet property="statusImage" destination="uaG-NC-KDJ" id="eoD-B8-YDG"/>
             </connections>
             <point key="canvasLocation" x="242.74809160305344" y="117.25352112676057"/>
         </collectionViewCell>
